- Fixed mis-aligned submenus  - Added fade to clicked menu items (user request to know they clicked)

--- a/html/css/menu.css
+++ b/html/css/menu.css
@@ -30,7 +30,7 @@
 }
 /* SHOW SUBMENU  2 */
 #menu ul li:hover ul, #menu ul li.over ul {
-    display:block;
+    display:none;
 }
 /* ******************************************************************* */
 /* STYLING UP THE LINKS */
